aboutページpc幅作成（代表メッセージまで）

--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -34,6 +34,7 @@
   --main-color: #ffb4c8;
   --palePink: #ff8aa1;
   --paleYellow: #ffef7f;
+  --paleGreen: #64DC96;
   --sub-color: #fddee8;
   --textBlack: #231815;
 }
