--- a/src/assets/css/page.about.css
+++ b/src/assets/css/page.about.css
@@ -228,7 +228,7 @@ history
     border: 3px solid var(--textBlack);
     border-radius: 50%;
     position: absolute;
-    right: -13.8%;
+    right: -13.9%;
     top: 10px;
 }
 .history__item.right::before {
@@ -437,6 +437,9 @@ message
         width: calc(100% - 5.28vw);
         margin: auto 2.64vw;
     }
+    .history__item.right::before {
+        left: -13.9%;
+    }
     .history__item:nth-child(3) {
         margin-top: 30px;
     }
@@ -482,6 +485,33 @@ message
     }
     .company__table th, .company__table td {
         line-height: 1.6;
+    }
+}
+
+@media screen and (max-width:1140px) {
+    .history__item.right::before {
+        left: -14.4%;
+    }
+    .history__item.left::before {
+        right: -14.4%;
+    }
+}
+
+@media screen and (max-width:1060px) {
+    .history__item.right::before {
+        left: -14.7%;
+    }
+    .history__item.left::before {
+        right: -14.7%;
+    }
+}
+
+@media screen and (max-width:860px) {
+    .history__item.right::before {
+        left: -15.2%;
+    }
+    .history__item.left::before {
+        right: -15.2%;
     }
 }
 
