--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 .stop{
   overflow:hidden;
-  padding-right: 17px;
+  /* padding-right: 17px; */
 }
 
 img {
@@ -802,6 +802,7 @@ lower common
 .lower__charaInner {
   height: auto;
   width: 100%;
+  height: 60vh;
   height: 530px;
   margin: -80px auto -150px;
   position: relative;
