--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -784,7 +784,7 @@ introduction
         min-width: 140px;
         font-size: var(--fontSize25);
         font-weight: 900;
-        letter-spacing: 0.17rem;
+        letter-spacing: 0.12rem;
         color: #fff;
         text-shadow: rgb(35, 24, 21) 2px 0px 0px, rgb(35, 24, 21) 1.75517px 0.958851px 0px, rgb(35, 24, 21) 1.0806px 1.68294px 0px, rgb(35, 24, 21) 0.141474px 1.99499px 0px, rgb(35, 24, 21) -0.832294px 1.81859px 0px, rgb(35, 24, 21) -1.60229px 1.19694px 0px, rgb(35, 24, 21) -1.97998px 0.28224px 0px, rgb(35, 24, 21) -1.87291px -0.701566px 0px, rgb(35, 24, 21) -1.30729px -1.5136px 0px, rgb(35, 24, 21) -0.421592px -1.95506px 0px, rgb(35, 24, 21) 0.567324px -1.91785px 0px, rgb(35, 24, 21) 1.41734px -1.41108px 0px, rgb(35, 24, 21) 1.92034px -0.558831px 0px;
     }
@@ -792,7 +792,7 @@ introduction
         grid-template-columns:1fr 1fr;
         gap: 10px;
         max-width: none;
-        width: 89.76vw;
+        width: clac(89.76vw - 10px);
         margin: auto;
         padding-top: 40px;
     }
@@ -993,9 +993,9 @@ introduction
     .introduction__point .point__img {
         max-width: 670px;
         max-height: 460px;
-        width: 310px;
-        height: 240px;
-        border: 3px solid var(--textBlack);
+        width: 79.48vw;
+        height: 61.53vw;
+        border: 2px solid var(--textBlack);
         position: relative;
         z-index: 2;
         background-color: #D9D9D9;
@@ -1003,9 +1003,9 @@ introduction
     .introduction__point .point__content {
         max-width: 622px;
         max-height: 460px;
-        width: 350px;
+        width: 89.74vw;
         height: auto;
-        border: 3px solid var(--textBlack);
+        border: 2px solid var(--textBlack);
         background-color: #fff;
         margin-top: -30px;
         margin-left: 0;
