--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -792,22 +792,22 @@ introduction
         grid-template-columns:1fr 1fr;
         gap: 10px;
         max-width: none;
-        width: clac(89.76vw - 10px);
+        width: 89.76vw;
         margin: auto;
-        padding-top: 40px;
+        padding: 40px 0 0 0;
     }
     .about__column--item {
         max-width: unset;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: unset;
     }
     .about__column--img {
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        padding: 40px 0 20px;
+        padding: 10px 0 10px;
     }
     .about__column--img::before {
         content: url(../images/service/service_about_itemBg.svg);
@@ -826,12 +826,14 @@ introduction
     }
     .about__column--text {
         font-size: 16px;
-        letter-spacing: 0.01rem;
-        margin-bottom: 30px;
+        letter-spacing: 0rem;
+        margin-bottom: 18px;
+        line-height: 1.4;
+        padding: 0 6px;
     }
     .about__column--text .small {
-        font-size: 12px;
-        letter-spacing: 0.03rem;
+        font-size: 11px;
+        letter-spacing: 0rem;
     }
     .service__about--description {
         margin: auto;
